--- a/hi3536dv100/etc/telemetry.conf
+++ b/hi3536dv100/etc/telemetry.conf
@@ -1,4 +1,4 @@
-serial=/dev/ttyAMA0
+#serial=/dev/ttyAMA0
 wlan=wlan0
 baud=115200
 bandwidth=20
@@ -15,4 +15,5 @@ fec_n=2
 fec_timeout=0
 guard_interval=long
 one_way=false
-
+### router: use simple mavfwd (0) or classic mavlink-routerd (1)
+router=1
