--- a/hi3536dv100/hi3536dv100_fpv_defconfig
+++ b/hi3536dv100/hi3536dv100_fpv_defconfig
@@ -106,11 +106,16 @@ BR2_PACKAGE_RTL8812AU_OPENIPC=y
 
 # FPV
 BR2_PACKAGE_WIFIBROADCAST=y
+#BR2_PACKAGE_WIFIBROADCASTOSD=y
 BR2_PACKAGE_MAVLINK_ROUTER=y
 BR2_PACKAGE_MAVFWD=y
 
+#LTE
+BR2_PACKAGE_USB_MODESWITCH=y
+BR2_PACKAGE_USB_MODESWITCH_DATA=y
+
 # ZEROTIER
-#BR2_PACKAGE_ZEROTIER_ONE=y
+BR2_PACKAGE_ZEROTIER_ONE=y
 
 # IPTABLES
 BR2_PACKAGE_IPTABLES=y
