--- a/hi3536dv100/etc/telemetry.conf
+++ b/hi3536dv100/etc/telemetry.conf
@@ -1,4 +1,4 @@
-#serial=/dev/ttyAMA0
+serial=/dev/ttyAMA0
 wlan=wlan0
 baud=115200
 bandwidth=20
@@ -8,8 +8,8 @@ mcs_index=1
 stream_rx=16
 stream_tx=144
 link_id=7669206
-port_rx=14651
-port_tx=14650
+port_rx=14551
+port_tx=14550
 fec_k=1
 fec_n=2
 fec_timeout=0
