--- a/gk7205v200/etc/majestic.yaml
+++ b/gk7205v200/etc/majestic.yaml
@@ -23,9 +23,9 @@ video0:
   bitrate: 3072
   codec: h265
   rcMode: cbr
-  gopSize: 0.2
-  size: 1920x1080
-  fps: 30
+  gopSize: 0.3
+  size: 1280x720
+  fps: 50
 video1:
   enabled: false
 jpeg:
@@ -58,7 +58,11 @@ isp:
   slowShutter: disabled
   drc: 350
   lowDelay: true
-  sensorConfig: /etc/sensors/imx307_i2c_2l_1080p.ini
+  blkCnt: 4
+  antiFlicker: disabled
+  memMode: normal
+  rawMode: fast
+  sensorConfig: /etc/sensors/60fps/720p_imx307_i2c_2l.ini
 netip:
   enabled: false
 outgoing:
