--- a/hi3536dv100/etc/mavlink.conf
+++ b/hi3536dv100/etc/mavlink.conf
@@ -1,18 +1,20 @@
 [General]
 DebugLogLevel = debug
-TcpServerPort = 0
+TcpServerPort = 5760
 
 [UdpEndpoint qgroundcontrol]
 Mode = Normal
-Address = 192.168.0.107
+Address = 0.0.0.0
 Port = 14550
 
 [UdpEndpoint telemetry_tx]
+Group=wfb
 Mode = Normal
 Address = 127.0.0.1
-Port = 14650
+Port = 14550
 
 [UdpEndpoint telemetry_rx]
+Group=wfb
 Mode = Server
-Address = 0.0.0.0
-Port = 14651
+Address = 127.0.0.1
+Port = 14551
