--- a/hi3536dv100/etc/mavlink.conf
+++ b/hi3536dv100/etc/mavlink.conf
@@ -3,7 +3,7 @@ DebugLogLevel = error
 TcpServerPort = 5760
 
 [UdpEndpoint qgroundcontrol]
-Mode = Normal
+Mode = Server
 Address = 0.0.0.0
 Port = 14550
 
