--- a/hi3536dv100/hi3536dv100_fpv_defconfig
+++ b/hi3536dv100/hi3536dv100_fpv_defconfig
@@ -60,11 +60,11 @@ BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/../general/package/busybox/busybox.config"
 BR2_PACKAGE_DROPBEAR_OPENIPC=y
 # BR2_PACKAGE_FDK_AAC_OPENIPC is not set
 BR2_PACKAGE_FWPRINTENV_OPENIPC=y
-BR2_PACKAGE_HASERL=y
+#BR2_PACKAGE_HASERL=y
 # BR2_PACKAGE_HISI_GPIO is not set
-BR2_PACKAGE_IPCTOOL=y
+#BR2_PACKAGE_IPCTOOL=y
 # BR2_PACKAGE_JSON_C is not set
-BR2_PACKAGE_JSONFILTER=y
+#BR2_PACKAGE_JSONFILTER=y
 # BR2_PACKAGE_LAME_OPENIPC is not set
 BR2_PACKAGE_LIBCURL_OPENIPC=y
 BR2_PACKAGE_LIBCURL_OPENIPC_CURL=y
@@ -72,14 +72,14 @@ BR2_PACKAGE_LIBCURL_OPENIPC_CURL=y
 # BR2_PACKAGE_LIBCURL_OPENIPC_PROXY_SUPPORT is not set
 # BR2_PACKAGE_LIBCURL_OPENIPC_COOKIES_SUPPORT is not set
 # BR2_PACKAGE_LIBCURL_OPENIPC_EXTRA_PROTOCOLS_FEATURES is not set
-BR2_PACKAGE_LIBCURL_OPENIPC_MBEDTLS=y
+#BR2_PACKAGE_LIBCURL_OPENIPC_MBEDTLS=y
 # BR2_PACKAGE_LIBEVENT_OPENIPC is not set
 # BR2_PACKAGE_LIBEVENT_OPENIPC_REMOVE_PYSCRIPT is not set
 # BR2_PACKAGE_LIBOGG_OPENIPC is not set
 # BR2_PACKAGE_LIBWEBSOCKETS_OPENIPC is not set
-BR2_PACKAGE_LIBYAML=y
+#BR2_PACKAGE_LIBYAML=y
 # BR2_PACKAGE_MAJESTIC_FONTS is not set
-BR2_PACKAGE_MBEDTLS_OPENIPC=y
+#BR2_PACKAGE_MBEDTLS_OPENIPC=y
 # BR2_PACKAGE_MBEDTLS_OPENIPC_PROGRAMS is not set
 # BR2_PACKAGE_MBEDTLS_OPENIPC_COMPRESSION is not set
 #BR2_PACKAGE_MICROBE_WEB=y
@@ -89,14 +89,14 @@ BR2_PACKAGE_MBEDTLS_OPENIPC=y
 # BR2_PACKAGE_SSHPASS is not set
 # BR2_PACKAGE_UACME_OPENIPC is not set
 BR2_PACKAGE_VTUND_OPENIPC=y
-BR2_PACKAGE_YAML_CLI=y
-BR2_PACKAGE_XMDP=y
+#BR2_PACKAGE_YAML_CLI=y
+#BR2_PACKAGE_XMDP=y
 
 # WiFi
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
-BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
-BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
+#BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
+#BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
 BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
 BR2_PACKAGE_LINUX_FIRMWARE_OPENIPC=y
 #BR2_PACKAGE_LINUX_FIRMWARE_OPENIPC_MT7601U=y
@@ -106,19 +106,22 @@ BR2_PACKAGE_RTL8812AU_OPENIPC=y
 
 # FPV
 BR2_PACKAGE_WIFIBROADCAST=y
-#BR2_PACKAGE_WIFIBROADCASTOSD=y
 BR2_PACKAGE_MAVLINK_ROUTER=y
-BR2_PACKAGE_MAVFWD=y
+#BR2_PACKAGE_MAVFWD=y
+BR2_PACKAGE_RSSI_FORWARD=y
+
+#FFMPEG
+BR2_PACKAGE_FFMPEG_OPENIPC=y
 
 #LTE
-BR2_PACKAGE_USB_MODESWITCH=y
-BR2_PACKAGE_USB_MODESWITCH_DATA=y
+#BR2_PACKAGE_USB_MODESWITCH=y
+#BR2_PACKAGE_USB_MODESWITCH_DATA=y
 
 # ZEROTIER
 BR2_PACKAGE_ZEROTIER_ONE=y
 
 # IPTABLES
-BR2_PACKAGE_IPTABLES=y
+#BR2_PACKAGE_IPTABLES=y
 
 # WIREGUARD
 # BR2_PACKAGE_WIREGUARD_LINUX_COMPAT is not set
