--- a/hi3536dv100/hi3536dv100_fpv_defconfig
+++ b/hi3536dv100/hi3536dv100_fpv_defconfig
@@ -62,7 +62,7 @@ BR2_PACKAGE_DROPBEAR_OPENIPC=y
 BR2_PACKAGE_FWPRINTENV_OPENIPC=y
 #BR2_PACKAGE_HASERL=y
 # BR2_PACKAGE_HISI_GPIO is not set
-#BR2_PACKAGE_IPCTOOL=y
+BR2_PACKAGE_IPCTOOL=y
 # BR2_PACKAGE_JSON_C is not set
 #BR2_PACKAGE_JSONFILTER=y
 # BR2_PACKAGE_LAME_OPENIPC is not set
@@ -96,7 +96,7 @@ BR2_PACKAGE_VTUND_OPENIPC=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 #BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
-#BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
+BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
 BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
 BR2_PACKAGE_LINUX_FIRMWARE_OPENIPC=y
 #BR2_PACKAGE_LINUX_FIRMWARE_OPENIPC_MT7601U=y
