--- a/gk7205v200/etc/telemetry.conf
+++ b/gk7205v200/etc/telemetry.conf
@@ -1,18 +1,15 @@
 serial=/dev/ttyAMA0
 wlan=wlan0
-baud=115200
+baud=230400
 bandwidth=20
 stbc=1
 ldpc=1
-mcs_index=2
+mcs_index=1
 stream_rx=144
 stream_tx=16
-link_id=7669206
 port_rx=14551
 port_tx=14550
-fec_k=1
-fec_n=2
-fec_timeout=0
+fec=5
 guard_interval=long
 one_way=false
 ### router: use simple mavfwd (0) or classic mavlink-routerd (1)
