--- a/gk7205v200/etc/wfb.conf
+++ b/gk7205v200/etc/wfb.conf
@@ -2,17 +2,14 @@ daemon=1
 wlan=wlan0
 region=BO
 channel=44
-txpower=10
-driver_txpower_override=10
+txpower=14
+driver_txpower_override=14
 bandwidth=20
 stbc=1
 ldpc=1
-mcs_index=2
+mcs_index=1
 stream=0
-link_id=7669206
 udp_port=5600
-fec_k=8
-fec_n=12
-fec_timeout=0
+fec=2
 guard_interval=long
 telemetry=true
