--- a/hi3536dv100/etc/wfb.conf
+++ b/hi3536dv100/etc/wfb.conf
@@ -5,8 +5,7 @@ channel=44
 txpower=10
 driver_txpower_override=10
 stream=0
-tab_wlan=wlan1
-#udp_addr=192.168.0.107
+udp_addr=192.168.0.118
 udp_port=5600
-use_hdmi=false
+use_hdmi=true
 telemetry=true
