--- a/hi3536dv100/etc/wfb.conf
+++ b/hi3536dv100/etc/wfb.conf
@@ -5,7 +5,8 @@ channel=44
 txpower=10
 driver_txpower_override=10
 stream=0
-udp_addr=192.168.0.118
+tab_wlan=wlan1
+#udp_addr=192.168.0.107
 udp_port=5600
-use_hdmi=true
+use_hdmi=false
 telemetry=true
