--- a/hi3536dv100/etc/wfb.conf
+++ b/hi3536dv100/etc/wfb.conf
@@ -2,11 +2,11 @@ daemon=1
 wlan=wlan0
 region=BO
 channel=44
-txpower=10
-driver_txpower_override=10
+txpower=16
+driver_txpower_override=16
 stream=0
 tab_wlan=wlan1
-#udp_addr=192.168.0.107
+udp_addr=192.168.0.107
 udp_port=5600
 use_hdmi=false
 telemetry=true
