--- a/hi3536dv100/hi3536dv100_fpv_defconfig
+++ b/hi3536dv100/hi3536dv100_fpv_defconfig
@@ -105,17 +105,13 @@ BR2_PACKAGE_LINUX_FIRMWARE_OPENIPC_ATHEROS_9271=y
 BR2_PACKAGE_RTL8812AU_OPENIPC=y
 
 # FPV
-BR2_PACKAGE_WIFIBROADCAST=y
+#BR2_PACKAGE_WIFIBROADCAST=y
+BR2_PACKAGE_WFBOPENHD=y
 BR2_PACKAGE_MAVLINK_ROUTER=y
 #BR2_PACKAGE_MAVFWD=y
-BR2_PACKAGE_RSSI_FORWARD=y
 
 #FFMPEG
 BR2_PACKAGE_FFMPEG_OPENIPC=y
-
-#LTE
-#BR2_PACKAGE_USB_MODESWITCH=y
-#BR2_PACKAGE_USB_MODESWITCH_DATA=y
 
 # ZEROTIER
 BR2_PACKAGE_ZEROTIER_ONE=y
