--- a/gk7205v200/etc/wfb.conf
+++ b/gk7205v200/etc/wfb.conf
@@ -2,14 +2,15 @@ daemon=1
 wlan=wlan0
 region=BO
 channel=44
-txpower=14
-driver_txpower_override=14
+txpower=16
+driver_txpower_override=16
 bandwidth=20
 stbc=1
 ldpc=1
 mcs_index=1
 stream=0
 udp_port=5600
-fec=2
+fec_k=h265
+fec_p=20
 guard_interval=long
 telemetry=true
