--- a/gk7205v200/etc/telemetry.conf
+++ b/gk7205v200/etc/telemetry.conf
@@ -9,8 +9,17 @@ stream_rx=144
 stream_tx=16
 port_rx=14551
 port_tx=14550
+
+##wfbopenhd
+#fec_k=1
+#fec_p=0
+
+##wfb-ng
+link_id=7669206
 fec_k=1
-fec_p=0
+fec_n=2
+fec_timeout=0
+
 guard_interval=long
 one_way=false
 ### router: use simple mavfwd (0) or classic mavlink-routerd (1)
