--- a/gk7205v200/etc/wfb.conf
+++ b/gk7205v200/etc/wfb.conf
@@ -1,7 +1,7 @@
 daemon=1
 wlan=wlan0
 region=BO
-channel=44
+channel=161
 txpower=16
 driver_txpower_override=16
 bandwidth=20
@@ -10,7 +10,16 @@ ldpc=1
 mcs_index=1
 stream=0
 udp_port=5600
-fec_k=h265
-fec_p=20
+
+##wfbopenhd
+#fec_k=h265
+#fec_p=20
+
+##wfb-ng
+link_id=7669206
+fec_k=8
+fec_n=12
+fec_timeout=0
+
 guard_interval=long
 telemetry=true
