--- a/hi3536dv100/etc/telemetry.conf
+++ b/hi3536dv100/etc/telemetry.conf
@@ -9,8 +9,17 @@ stream_rx=16
 stream_tx=144
 port_rx=14651
 port_tx=14650
+
+##wfbopenhd
+#fec_k=1
+#fec_p=0
+
+##wfb-ng
+link_id=7669206
 fec_k=1
-fec_p=0
+fec_n=2
+fec_timeout=0
+
 guard_interval=long
 one_way=false
 
