--- a/hi3536dv100/etc/wfb.conf
+++ b/hi3536dv100/etc/wfb.conf
@@ -1,10 +1,11 @@
 daemon=1
 wlan=wlan0
 region=BO
-channel=44
-txpower=16
-driver_txpower_override=16
+channel=161
+txpower=10
+driver_txpower_override=10
 stream=0
+link_id=7669206
 tab_wlan=wlan1
 udp_addr=192.168.0.107
 udp_port=5600
