--- a/gk7205v200/etc/wfb.conf
+++ b/gk7205v200/etc/wfb.conf
@@ -12,14 +12,14 @@ stream=0
 udp_port=5600
 
 ##wfbopenhd
-#fec_k=h265
-#fec_p=20
+fec_k=h265
+fec_p=20
 
 ##wfb-ng
-link_id=7669206
-fec_k=8
-fec_n=12
-fec_timeout=0
+#link_id=7669206
+#fec_k=8
+#fec_n=12
+#fec_timeout=0
 
 guard_interval=long
 telemetry=true
