--- a/hi3536dv100/etc/wfb.conf
+++ b/hi3536dv100/etc/wfb.conf
@@ -5,7 +5,7 @@ channel=161
 txpower=10
 driver_txpower_override=10
 stream=0
-link_id=7669206
+#link_id=7669206
 tab_wlan=wlan1
 udp_addr=192.168.0.107
 udp_port=5600
