--- a/hi3536dv100/hi3536dv100.generic.config
+++ b/hi3536dv100/hi3536dv100.generic.config
@@ -1184,6 +1184,9 @@ CONFIG_PPP_MPPE=m
 # CONFIG_SLIP is not set
 CONFIG_SLHC=m
 CONFIG_USB_NET_DRIVERS=m
+CONFIG_USB_USBNET=m
+CONFIG_USB_NET_CDCETHER=m
+CONFIG_USB_NET_RNDIS_HOST=m
 CONFIG_WLAN=y
 # CONFIG_WLAN_VENDOR_ADMTEK is not set
 # CONFIG_WLAN_VENDOR_ATH is not set
@@ -1227,10 +1230,7 @@ CONFIG_RTL8XXXU=m
 # CONFIG_WLAN_VENDOR_TI is not set
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 # CONFIG_MAC80211_HWSIM is not set
-#CONFIG_USB_NET_RNDIS_WLAN=y
-CONFIG_USB_USBNET=m
-CONFIG_USB_NET_CDCETHER=m
-CONFIG_USB_NET_RNDIS_HOST=m
+CONFIG_USB_NET_RNDIS_WLAN=y
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -1748,9 +1748,9 @@ CONFIG_DUMMY_CONSOLE=y
 #
 CONFIG_HID=y
 # CONFIG_HID_BATTERY_STRENGTH is not set
-CONFIG_HIDRAW=m
-CONFIG_UHID-m
-CONFIG_HID_GENERIC=m
+# CONFIG_HIDRAW is not set
+# CONFIG_UHID is not set
+CONFIG_HID_GENERIC=y
 
 #
 # Special HID drivers
@@ -1806,7 +1806,7 @@ CONFIG_HID_MICROSOFT=y
 # CONFIG_HID_SUNPLUS is not set
 # CONFIG_HID_RMI is not set
 # CONFIG_HID_GREENASIA is not set
-CONFIG_HID_SMARTJOYPLUS=y
+# CONFIG_HID_SMARTJOYPLUS is not set
 # CONFIG_HID_TIVO is not set
 # CONFIG_HID_TOPSEED is not set
 # CONFIG_HID_THRUSTMASTER is not set
@@ -1821,19 +1821,19 @@ CONFIG_HID_SMARTJOYPLUS=y
 # USB HID support
 #
 CONFIG_USB_HID=y
-CONFIG_HID_PID=y
-CONFIG_USB_HIDDEV=y
+# CONFIG_HID_PID is not set
+# CONFIG_USB_HIDDEV is not set
 
 #
 # I2C HID support
 #
-CONFIG_I2C_HID=y
+# CONFIG_I2C_HID is not set
 CONFIG_USB_OHCI_LITTLE_ENDIAN=y
 CONFIG_USB_SUPPORT=y
 CONFIG_USB_COMMON=y
 CONFIG_USB_ARCH_HAS_HCD=y
 CONFIG_USB=y
-CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
+# CONFIG_USB_ANNOUNCE_NEW_DEVICES is not set
 
 #
 # Miscellaneous USB options
