--- a/gk7205v200/etc/wfb.conf
+++ b/gk7205v200/etc/wfb.conf
@@ -1,8 +1,9 @@
 wlan=wlan0
 region=BO
-#channel=44
-freq=5220M
-txpower=16
+# By default used channel number, but, you may set freq instead. For ex: 2387M
+channel=44
+#frequency=5220M
+txpower=20
 driver_txpower_override=16
 bandwidth=20
 stbc=1
